syntax = "proto3";

package main;

option go_package = "./proto";

import "filter_message.proto";

service FilterService {
    rpc GetFilterValues(GetFilterValuesReq) returns (GetFilterValuesResp);
}

service SearchQueryService {
    rpc GetSearchQuery(GetSearchQueryReq) returns (GetSearchQueryResp);
}
